syntax = "proto3";

package response;

import "account/dto/response/account-response.proto";

option java_multiple_files = true;
option java_package = "grpc.account.dto.response";

message CheckAccountByIdResponse {
  bool is_exists = 1;
  AccountResponse account = 2;
}